fix: traffic chart dash line not showing

--- a/src/components/Search.module.scss
+++ b/src/components/Search.module.scss
@@ -43,4 +43,5 @@
   top: 50%;
   transform: translateY(-50%);
   left: 10px;
+  line-height: 0;
 }
